--- a/testDrawSketch/Base.lproj/MainMenu.xib
+++ b/testDrawSketch/Base.lproj/MainMenu.xib
@@ -14,11 +14,16 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
+                <outlet property="backgroundviewindrawingboard" destination="zvY-ZP-r72" id="h6g-4c-CgO"/>
                 <outlet property="bigsizeimage" destination="f4q-rA-fbF" id="n76-zt-fOV"/>
+                <outlet property="bsindrawingboard" destination="NYS-2s-7VR" id="RrN-Zw-cnX"/>
                 <outlet property="dSC" destination="rLz-3s-Ftd" id="mY2-6u-Od7"/>
+                <outlet property="drawingboard" destination="8yZ-RT-HNT" id="LEd-ve-FUe"/>
+                <outlet property="dscindrawingboard" destination="3yZ-dY-kQJ" id="t7X-ot-uIn"/>
                 <outlet property="extendbutton" destination="9Z8-wn-tgc" id="Wis-hV-G4H"/>
                 <outlet property="imageT" destination="9Ld-fz-4Dg" id="LzC-GY-nfd"/>
                 <outlet property="resultimage" destination="71C-Kq-chf" id="uRV-Ai-mdz"/>
+                <outlet property="rivindrawingboard" destination="Hgm-RI-QMv" id="utZ-5z-alm"/>
                 <outlet property="scrollimagelist" destination="2fm-qJ-Rvz" id="KGR-gc-F1U"/>
                 <outlet property="thumblist" destination="xo5-o9-zgm" id="r3a-4N-rhF"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
@@ -719,6 +724,10 @@
                             <action selector="trace2png:" target="Voe-Tx-rLC" id="ju6-8N-8gM"/>
                         </connections>
                     </button>
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rLz-3s-Ftd" customClass="drawSketchCollection">
+                        <rect key="frame" x="207" y="158" width="568" height="284"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    </customView>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uLh-oR-VB9">
                         <rect key="frame" x="259" y="560" width="117" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -730,6 +739,43 @@
                             <action selector="testdownfile:" target="Voe-Tx-rLC" id="Ddb-U4-M3J"/>
                         </connections>
                     </button>
+                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yZ-RT-HNT" customClass="drawingBoard">
+                        <rect key="frame" x="228" y="252" width="512" height="279"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <clipView key="contentView" ambiguous="YES" id="4zT-no-MOk">
+                            <rect key="frame" x="1" y="1" width="510" height="277"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NYS-2s-7VR" customClass="boardshell">
+                                    <rect key="frame" x="0.0" y="0.0" width="495" height="262"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hgm-RI-QMv" customClass="resultimageview">
+                                            <rect key="frame" x="166" y="83" width="163" height="96"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        </customView>
+                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zvY-ZP-r72">
+                                            <rect key="frame" x="223" y="107" width="48" height="48"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="bMu-eC-Sdo"/>
+                                        </imageView>
+                                        <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3yZ-dY-kQJ" customClass="drawSketchCollection">
+                                            <rect key="frame" x="166" y="83" width="163" height="96"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        </customView>
+                                    </subviews>
+                                </view>
+                            </subviews>
+                        </clipView>
+                        <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="WO5-QF-8NP">
+                            <rect key="frame" x="1" y="262" width="510" height="16"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="pTL-nz-iTL">
+                            <rect key="frame" x="495" y="1" width="16" height="277"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
                     <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xo5-o9-zgm">
                         <rect key="frame" x="11" y="124" width="183" height="395"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -754,10 +800,6 @@
                     </scrollView>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Igo-bk-m4V" customClass="thumbnailView">
                         <rect key="frame" x="202" y="423" width="163" height="96"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    </customView>
-                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rLz-3s-Ftd" customClass="drawSketchCollection">
-                        <rect key="frame" x="203" y="143" width="568" height="284"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     </customView>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dve-KN-y6Y">
@@ -896,14 +938,36 @@
                             </subviews>
                         </clipView>
                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="NCM-98-jyw">
-                            <rect key="frame" x="1" y="110" width="543" height="16"/>
+                            <rect key="frame" x="1" y="-15" width="0.0" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="5Yx-ol-a3t">
-                            <rect key="frame" x="528" y="1" width="16" height="71"/>
+                            <rect key="frame" x="-15" y="1" width="16" height="0.0"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hMt-dl-nBU">
+                        <rect key="frame" x="366" y="538" width="84" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="zoomin" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="I3O-yN-cpg">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="zoomin:" target="Voe-Tx-rLC" id="mnK-81-UZx"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cC4-Ql-ZVh">
+                        <rect key="frame" x="442" y="538" width="93" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="zoomout" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="xG3-31-VUW">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="zoomout:" target="Voe-Tx-rLC" id="oid-cy-U0s"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
         </window>
